--- a/index.html
+++ b/index.html
@@ -159,6 +159,14 @@
               />
               <p class="web-caption">DSF 18.0 Web Development (Front End)</p>
             </div>
+            <div class="col-md-6 text-center">
+              <img
+                class="boxfilms img-fluid"
+                src="./assets/web/Certificate_RevoU.jpg"
+                alt="boxfilms"
+              />
+              <p class="web-caption">RevoU Fundamental Course Software Engineering</p>
+            </div>
           </div>
         </div>
       </div>
@@ -172,7 +180,7 @@
           and check my resume below. 
         </p>
         <a
-          href="https://drive.google.com/file/d/1Ev670GFVJEAg3wruXNCDVWpPbEYfs9TN/view?usp=drive_link"
+          href="https://drive.google.com/file/d/1BahY5BfkFfujRS9i3uc5RS1A8J-rAy7G/view?usp=drive_link"
           class="btn btn-primary btn-resume"
           target="_blank"
           >Download My Resume</a
