--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
       <div class="skills" id="certificate">
         <h2 class="tools-skills">Licenses and Certificates</h2>
         <div class="blur2"></div>
-        <div class="programming text-center">
+        <div class="project">
           <div class="row">
             <div class="col-md-6 text-center">
               <img
                 class="boxfilms img-fluid"
                 src="./assets/web/Certificate_DSF.jpg"
-                alt="boxfilms"
+                alt="dsf"
               />
               <p class="web-caption">DSF 18.0 Web Development (Front End)</p>
             </div>
@@ -163,9 +163,17 @@
               <img
                 class="boxfilms img-fluid"
                 src="./assets/web/Certificate_RevoU.jpg"
-                alt="boxfilms"
+                alt="revou"
               />
               <p class="web-caption">RevoU Fundamental Course Software Engineering</p>
+            </div>
+            <div class="col-md-6 text-center">
+              <img
+                class="boxfilms img-fluid"
+                src="./assets/web/Certificate_web_dasar_dicoding.jpg"
+                alt="dicoding"
+              />
+              <p class="web-caption">Belajar Dasar Pemrograman Web</p>
             </div>
           </div>
         </div>
@@ -180,7 +188,7 @@
           and check my resume below. 
         </p>
         <a
-          href="https://drive.google.com/file/d/1BahY5BfkFfujRS9i3uc5RS1A8J-rAy7G/view?usp=drive_link"
+          href="https://drive.google.com/file/d/1vC9TtHyHtxq47mxOL1438fwsxLuPDGbv/view?usp=drive_link"
           class="btn btn-primary btn-resume"
           target="_blank"
           >Download My Resume</a
