--- a/index.html
+++ b/index.html
@@ -175,6 +175,14 @@
               />
               <p class="web-caption">Belajar Dasar Pemrograman Web</p>
             </div>
+            <div class="col-md-6 text-center">
+              <img
+                class="boxfilms img-fluid"
+                src="./assets/web/Alibaba-cloud-certification.jpg"
+                alt="alibaba"
+              />
+              <p class="web-caption">Alibaba Cloud Certified Developer</p>
+            </div>
           </div>
         </div>
       </div>
@@ -188,7 +196,7 @@
           and check my resume below. 
         </p>
         <a
-          href="https://drive.google.com/file/d/1vC9TtHyHtxq47mxOL1438fwsxLuPDGbv/view?usp=drive_link"
+          href="https://drive.google.com/file/d/1zDSK3aq1LFEhzUNMxVSHOiNc1cGoBVvQ/view?usp=drive_link"
           class="btn btn-primary btn-resume"
           target="_blank"
           >Download My Resume</a
