--- a/index.html
+++ b/index.html
@@ -183,6 +183,14 @@
               />
               <p class="web-caption">Alibaba Cloud Certified Developer</p>
             </div>
+            <div class="col-md-6 text-center">
+              <img
+                class="boxfilms img-fluid"
+                src="./assets/web/Certificate_frontend_pemula_dicoding.jpg"
+                alt="dicoding"
+              />
+              <p class="web-caption">Belajar Membuat Front-End Web untuk Pemula</p>
+            </div>
           </div>
         </div>
       </div>
@@ -196,7 +204,7 @@
           and check my resume below. 
         </p>
         <a
-          href="https://drive.google.com/file/d/1zDSK3aq1LFEhzUNMxVSHOiNc1cGoBVvQ/view?usp=drive_link"
+          href="https://drive.google.com/file/d/1WxL36LY_YAMct22qG2tcw4YMmDv33Dcz/view?usp=drive_link"
           class="btn btn-primary btn-resume"
           target="_blank"
           >Download My Resume</a
